// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TaggerUserRow - Snapshots > matches snapshot when current user 1`] = `
<div
  data-is-current-user="true"
  data-is-following="false"
  data-is-loading="false"
  data-is-status-loading="false"
  data-testid="user-list-item"
  data-user-avatar="https://cdn.example.com/avatar/user-123.jpg"
  data-user-id="user-123"
  data-user-name="Test User"
  data-variant="compact"
>
  <button
    data-testid="user-click"
  >
    View Profile
  </button>
  <button
    data-testid="follow-click"
  >
    Follow
  </button>
</div>
`;

exports[`TaggerUserRow - Snapshots > matches snapshot when following 1`] = `
<div
  data-is-current-user="false"
  data-is-following="true"
  data-is-loading="false"
  data-is-status-loading="false"
  data-testid="user-list-item"
  data-user-avatar="https://cdn.example.com/avatar/user-123.jpg"
  data-user-id="user-123"
  data-user-name="Test User"
  data-variant="compact"
>
  <button
    data-testid="user-click"
  >
    View Profile
  </button>
  <button
    data-testid="follow-click"
  >
    Follow
  </button>
</div>
`;

exports[`TaggerUserRow - Snapshots > matches snapshot when loading 1`] = `
<div
  data-is-current-user="false"
  data-is-following="false"
  data-is-loading="true"
  data-is-status-loading="false"
  data-testid="user-list-item"
  data-user-avatar="https://cdn.example.com/avatar/user-123.jpg"
  data-user-id="user-123"
  data-user-name="Test User"
  data-variant="compact"
>
  <button
    data-testid="user-click"
  >
    View Profile
  </button>
  <button
    data-testid="follow-click"
  >
    Follow
  </button>
</div>
`;

exports[`TaggerUserRow - Snapshots > matches snapshot when status is loading 1`] = `
<div
  data-is-current-user="false"
  data-is-following="false"
  data-is-loading="false"
  data-is-status-loading="true"
  data-testid="user-list-item"
  data-user-avatar="https://cdn.example.com/avatar/user-123.jpg"
  data-user-id="user-123"
  data-user-name="Test User"
  data-variant="compact"
>
  <button
    data-testid="user-click"
  >
    View Profile
  </button>
  <button
    data-testid="follow-click"
  >
    Follow
  </button>
</div>
`;

exports[`TaggerUserRow - Snapshots > matches snapshot with default state 1`] = `
<div
  data-is-current-user="false"
  data-is-following="false"
  data-is-loading="false"
  data-is-status-loading="false"
  data-testid="user-list-item"
  data-user-avatar="https://cdn.example.com/avatar/user-123.jpg"
  data-user-id="user-123"
  data-user-name="Test User"
  data-variant="compact"
>
  <button
    data-testid="user-click"
  >
    View Profile
  </button>
  <button
    data-testid="follow-click"
  >
    Follow
  </button>
</div>
`;

exports[`TaggerUserRow - Snapshots > matches snapshot with tagger without name 1`] = `
<div
  data-is-current-user="false"
  data-is-following="false"
  data-is-loading="false"
  data-is-status-loading="false"
  data-testid="user-list-item"
  data-user-avatar="https://cdn.example.com/avatar/user-456.jpg"
  data-user-id="user-456"
  data-variant="compact"
>
  <button
    data-testid="user-click"
  >
    View Profile
  </button>
  <button
    data-testid="follow-click"
  >
    Follow
  </button>
</div>
`;
